styles/common-template-m.css
/* ... */
.modal-ready .modal-popup.no-transition {
  -webkit-transition: none;
     -moz-transition: none;
          transition: none;
}

.encircled {
  border-radius: 50%;
  padding: 8px 8px 8px 8px;
  width: 30px;
  height: 30px;
  border: 3px solid #fff;
}

.encircled, .encircled i {
  -webkit-box-sizing: initial;
     -moz-box-sizing: initial;
          box-sizing: initial;
}

.stockCharts {
  text-align: center;
}

.stockCharts h3, .stockCharts p {
  font-weight: 400;
  font-size: 1.5rem;
}

.stockCharts .reset {
  color: #3182bd;
  cursor: pointer;
}

.actionBtn {
  border-radius: 0.2rem;
}

.dialogBtn {
  display: inline;
  border: 1px solid black;
  border-radius: 0.4rem;
  font-size: 2rem;
  padding: 0.5rem 1.5rem;
  margin: 1rem;
}

.closeDialogBtn {
  position: absolute;
  top: -14px;
  right: -14px;
  background: black;
  height: 24px;
  width: 24px;
  border-radius: 20px;
  border: 3px solid white;
  z-index: 10005;
}

.closeDialogBtn > * {
  position: absolute;
  top: -3px;
  left: 4px;
  font-size: 20px;
  color: white;
}

.closeDialogBtn > *:after {  
  content: "\2716";
}

.gauges {
  padding: 1rem 1rem;
  margin: 0rem 1rem;
}

.gauge {
  width: 140px;
  display: inline-block;
}

.gauge > * {
  display: inline-block;
  width: 100%;
  color: white;
  text-align: center; 
  font-size: 2rem; 
  font-weight: bold;
}

@media screen and (max-width: 480px) and (orientation: portrait) {
  .dialogBtn {
    display: block;
  }
  
  .gauges {
    padding: 3rem 1rem;
  }
  
  .gauge {
    width: 75px;
  }
}

.placeholder {
  font-size:0;
}

.placeholder:after {
  content:"."
}

.subClass {
  cursor: pointer;
  padding: 3px;
  display: inline-block;
  width: auto;
  padding: 4px 10px;
}

label.subClass {
  font-size: 1.5rem;
  -webkit-appearance: button;
     -moz-appearance: button;
          appearance: button;
}

.subClass input {
  display: none;
}

.cf:before,
.cf:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.cf:after {
    clear: both;
}

.centered {
  text-align: center;
}

